--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,10 @@ dist
 
 # TernJS port file
 .tern-port
+
+# vscode
+.vscode
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
