--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^4.2.0",
+    "mongoose": "^6.0.13",
     "morgan": "~1.9.1"
   }
 }
