Delete redundant files
removed all category and product files because it has been done
dynamically in two sepereate files

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.0.14",
     "morgan": "~1.9.1"
   }
 }
