Fix grant access issue
open a session then pass the user name through this session not in string query

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
-
     "lodash": "^4.17.21",
     "mongodb": "^4.2.0",
     "mongoose": "^6.0.13",
@@ -23,6 +23,5 @@
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3"
-
   }
 }
