--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
+    "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "mongodb": "^4.2.0",
     "mongoose": "^6.0.13",
